配置文件学习

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=7574be4358c71923753f
+github.client.secret=d42f19025745f97e5539b4e62ad6aa76f24dbeff
+github.redirect.uri=http://localhost:8887/callback
