--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=8887
-github.client.id=7574be4358c71923753f
-github.client.secret=d42f19025745f97e5539b4e62ad6aa76f24dbeff
+github.client.id=e195abf4075e8ac8c4ed
+github.client.secret=7b79e5cc902ffb0a1766d4b5bdea0bbd30566130
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=a414
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
